# vistascan-app

./: .gitignore  README.md  docker-compose.prod.yml
vistascan-be/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
vistascan-be/src/: config.py  logger.py  main.py
vistascan-be/src/api/rest/: dependencies.py
vistascan-be/src/api/rest/routes/: admin.py  auth.py  consultation.py  websocket.py
vistascan-be/src/application/: exceptions.py
vistascan-be/src/application/dto/: consultation_dto.py  user_dto.py
vistascan-be/src/application/interfaces/: event_handler.py  model_client.py  repositories.py  security.py  services.py  storage.py
vistascan-be/src/application/services/: admin_service.py  auth_service.py  consultation_service.py
vistascan-be/src/domain/entities/: consultation.py  event.py  report.py  study.py  user.py
vistascan-be/src/infrastructure/events/: websocket_manager.py
vistascan-be/src/infrastructure/model/: model_service.py
vistascan-be/src/infrastructure/persistence/mongo/: consultation_repository.py  models.py  user_repository.py
vistascan-be/src/infrastructure/security/: bcrypt_password_hasher.py  jwt_token_generator.py
vistascan-be/src/infrastructure/storage/: minio_storage.py
vistascan-fe/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
vistascan-fe/src/: App.tsx  index.css  main.tsx
vistascan-fe/src/api/: adminApi.ts  apiSlice.ts  authApi.ts  consultation.api.ts  consultationApi.ts
vistascan-fe/src/components/: ExpertConsultations.tsx
vistascan-fe/src/store/: store.ts  (+3 more)
(+46 files in other folders)
